fix broken style

--- a/src/pages/portfolio/ProjectDetails.module.scss
+++ b/src/pages/portfolio/ProjectDetails.module.scss
@@ -126,6 +126,7 @@
       color: $grey;
       opacity: 0;
       gap: 1rem;
+      width: calc(100% - 6rem);
       margin: 0 3rem;
 
       & * {
